commit finale, si spera. Aggiornato il readme, messo l' eseguibile elibreria per poter eliminare file, e bot.