@@ -1,3 +1,14 @@
 Credenziali per l'accesso Admin:
 Username: albicocche
 Password: mascarpone
+
+___________________________________________________________
+
+Per eseguire il flie .jar (Spacca.jar)>
+Dal prompt dei comandi scrivere:
+
+java --module-path "path delle librerire javafx" --add-modules javafx.controls,javafx.fxml -jar  e poi il percorso (o semplicemente trascinando nel prompt) il .jar eseguibile.
+
+Esempio: java --module-path "C:\Users\BS00000000\Desktop\javafx-sdk-20.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar C:\Users\BS00000000\Desktop\PROGETTO
+
+__________________________________________________________
